@@ -1,16 +1,0 @@
-/*
- * Copyright (c) 2018
- * IoTech Ltd
- *
- * SPDX-License-Identifier: Apache-2.0
- *
- */
-
-#ifndef _EDGEX_DEVICE_STATE_H_
-#define _EDGEX_DEVICE_STATE_H_ 1
-
-typedef enum { LOCKED, UNLOCKED } edgex_device_adminstate;
-
-typedef enum { ENABLED, DISABLED } edgex_device_operatingstate;
-
-#endif
