@@ -12,8 +12,9 @@ differs as follows:
 
 Changes for 1.0.0:
 
-- Some parts of the edgex_deviceprofile structure are now held in appropriate
-  types rather than strings.
+- Assertions on data readings are implemented.
+- Some parts of the edgex model are now held in appropriate types rather
+  than strings.
 -   edgex_device_resulttype is renamed to edgex_propertytype, reflecting its
     broader usage.
 
@@ -22,6 +23,7 @@ Changes for 0.7.1:
 - Some verification on Device Profiles is now done at startup. This may result
   in failures during startup rather than in "device" command handling.
 - The /device/name/{name}/{command} REST endpoint is implemented.
+- Metadata callbacks for device creation and deletion are processed.
 
 Changes for Delhi release (0.7.0):
 
